various fixed bugs: 1) added a ui-scrollview-container class to override css bugs caused by an additional div created by scrollview if data-role="content" has more than one element to scroll 2) added a ui-crumbs class css to limit crumbs width to 25% of header width only - long text will have an ellipsis. 3) fixed z-index of header, footer and content so that content doesn't scroll on top of the header or footer 4) auto calculated the top and bottom css values for content based on footer and header height so content doesn't get hidden by footer and header 5) used changePage for all initial page setup so that events can be triggered and you can hook to page events for all pages 6) fixed some issues with refresh so you can now refresh pages without history and crumb issues very satisfying weekend :-)

--- a/experiments/splitview/jquery.mobile.splitview.css
+++ b/experiments/splitview/jquery.mobile.splitview.css
@@ -47,6 +47,7 @@ body {
   bottom:auto; 
   left:0;
   right:0;
+  z-index: 1000;
 }
 
 .splitview.min-width-480px .ui-footer {
@@ -55,22 +56,24 @@ body {
   bottom:0;
   left:0;
   right:0;
+  z-index:1000;
 }
 
 .splitview.min-width-480px .ui-content {
   position:absolute;
-  top:40px;   /*TODO: need to dynamically set this and bottom when we use dynamic toolbars later*/
+  top:0;
   bottom:0;
   left:0;
   right:0;
-  overflow: auto;
+  overflow:auto;
+  z-index:1;
 }
 
 /************************************************************************************************************
 popover css for portrait orientation, modified from 
 http://www.cagintranet.com/archive/create-an-ipad-like-dropdown-popover/
 ************************************************************************************************************/
-.panel-popover .popover_triangle {left:7px;} /*adjust this if you change the text in the popover button */
+.panel-popover .popover_triangle {left:7px;}
 .panel-popover {
   color: black;
   display:none;
